# datar

./: .coveragerc  .gitignore  .pre-commit-config.yaml  404.html  README.md  README.rst  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  style.css  tox.ini
.codesandbox/: Dockerfile  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  submit_question.yml
.github/workflows/: build.yml  ci.yml  docs.yml
CHANGELOG/: index.html
api/datar/: index.html
api/datar.all/: index.html
api/datar.apis/: index.html
api/datar.apis.base/: index.html
api/datar.apis.dplyr/: index.html
api/datar.apis.forcats/: index.html
api/datar.apis.misc/: index.html
api/datar.apis.tibble/: index.html
api/datar.apis.tidyr/: index.html
api/datar.base/: index.html
api/datar.base.constants/: index.html
api/datar.base.funcs/: index.html
api/datar.base.verbs/: index.html
api/datar.core/: index.html
api/datar.core.names/: index.html
api/datar.core.operator/: index.html
api/datar.core.options/: index.html
api/datar.core.plugin/: index.html
api/datar.core.utils/: index.html
api/datar.data/: index.html
api/datar.data.metadata/: index.html
api/datar.datar/: index.html
api/datar.datar.verbs/: index.html
api/datar.datasets/: index.html
api/datar.dplyr/: index.html
api/datar.dplyr.funcs/: index.html
api/datar.dplyr.verbs/: index.html
api/datar.stats/: index.html
api/datar.stats.funcs/: index.html
api/datar.tibble/: index.html
api/datar.tibble.funcs/: index.html
api/datar.tidyr/: index.html
api/datar.tidyr.verbs/: index.html
api/datar.utils/: index.html
api/datar.utils.verbs/: index.html
backends/: index.html
data/: index.html
datar/: __init__.py  all.py  base.py  datasets.py  dplyr.py  forcats.py  misc.py  other.py  testing.py  tibble.py  tidyr.py
datar/apis/: base.py  data.py  dplyr.py  forcats.py  misc.py  other.py  tibble.py  tidyr.py
datar/base/: __init__.py  arithmetic.py  arithmetic_internal.py  bessel.py  casting.py  complex.py  constants.py  cum.py  date.py  factor.py  funcs.py  funs.py  glimpse.py  logical.py  na.py  null.py  options.py  random.py  rep.py  seq.py  special.py  stats.py  string.py  table.py  testing.py  trig.py  trig_hb.py  verbs.py  which.py
datar/core/: __init__.py  _frame_format_patch.py  broadcast.py  collections.py  contexts.py  defaults.py  exceptions.py  factory.py  frame_format_patch.py  grouped.py  grouped2.py  import_names_conflict.py  load_plugins.py  middlewares.py  names.py  operator.py  options.py  plugin.py  tibble.py  types.py  utils.py  warn_builtin_names.py
datar/data/: __init__.py  metadata.py
datar/datar/: __init__.py  funcs.py  verbs.py
datar/datasets/: __init__.py  metadata.toml
datar/dplyr/: __init__.py  _rank.py  across.py  arrange.py  bind.py  context.py  count_tally.py  desc.py  dfilter.py  distinct.py  dslice.py  filter.py  funcs.py  funs.py  generics.py  glimpse.py  group_by.py  group_data.py  group_iter.py  (+18 more)
datar2/: __init__.py  testing.py
docs/: CHANGELOG.md  TODO.md  advanced.md  backends.md  data.md  datasets.md  f.md  import.md  indexing.md  options.md  performance.ipynb  piping_vs_regular.md  porting_rules.md  requirements.txt  style.css
examples/: Untitled.ipynb  Untitled1.ipynb  across.ipynb  arrange.ipynb  base.ipynb  bind.ipynb  case_when.ipynb  coalesce.ipynb  context.ipynb  count.ipynb  cumall.ipynb  distinct.ipynb  expand.ipynb  expand_grid.ipynb  extract.ipynb  fill.ipynb  filter-joins.ipynb  get.ipynb  group_by.ipynb  group_map.ipynb  group_split.ipynb  group_trim.ipynb  lead-lag.ipynb  mutate-joins.ipynb  mutate.ipynb  n_distinct.ipynb  na_if.ipynb  near.ipynb  nest-join.ipynb  nth.ipynb  pivot_longer.ipynb  pivot_wider.ipynb  pull.ipynb  ranking.ipynb  readme.ipynb  recode.ipynb  relocate.ipynb  rename.ipynb  replace_na.ipynb  rowwise.ipynb  (+8 more)
f/: index.html
import/: index.html
options/: index.html
plyrda/: __init__.py  all.py  base.py  common.py  commons.py  contexts.py  dplyr.py  exceptions.py  funcs.py  group_by.py  helpers.py  middlewares.py  operator.py  operators.py  stats.py  utils.py  verbs.py
plyrda2/: __init__.py  commons.py  funcs.py  operators.py  utils.py  verbs.py
search/: search_index.json
test2/: conftest.py  test_datar.py
tests/: __init__.py  conflict_names.py  conftest.py  test_array_ufunc.py  test_base.py  test_base_arithmetic.py  test_base_bessel.py  test_base_casting.py  test_base_complex.py  test_base_cum.py  test_base_date.py  test_base_factor.py  test_base_funs.py  test_base_logical.py  test_base_na.py  test_base_null.py  test_base_options.py  test_base_random.py  test_base_seq.py  test_base_special.py  test_base_string.py  test_base_table.py  test_base_testing.py  test_base_trig.py  test_base_trig_hb.py  test_base_verbs.py  test_base_which.py  test_commons.py  test_conflict_names.py  test_core.py  test_core_collections.py  test_core_frame_format_patch.py  test_core_grouped.py  test_core_middlewares.py  test_core_names.py  test_core_operator.py  test_core_options.py  test_core_utils.py  test_core_warn_builtin_names.py  test_data.py  (+67 more)
tests2/: test_forcats_fct_multi.py  test_funcs.py  test_verbs.py
(+475 files in other folders)
