[tool.poetry]
name = "datar"
version = "0.9.1"
description = "Port of dplyr and other related R packages in python, using pipda."
authors = ["pwwang <pwwang@pwwang.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pwwang/datar"
repository = "https://github.com/pwwang/datar"

[tool.poetry.dependencies]
python = "^3.7.1"  # required by modin 0.10.2
pipda = "^0.8"
## included in python-simpleconf
# diot = "^0.1"
## included in pipda
# executing = "*"
# varname = "*"
pandas = "^1.3"
pdtypes = "^0.0"
# rtoml included
python-simpleconf = {version = "^0.5", extras = ["toml"]}
scipy = { version = "^1.6", optional = true }
wcwidth = { version = "^0.2", optional = true }
python-slugify = {version = "^6", optional = true}
modin = {version = "^0.10", optional = true}

[tool.poetry.extras]
modin = ["modin"]
scipy = ["scipy"]
wcwidth = ["wcwidth"]
slugify = ["python-slugify"]

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
pytest-xdist = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short -n auto --cov-config=.coveragerc --cov=datar --cov-report xml:cov.xml --cov-report term-missing"
# addopts = "-vv --cov-config=.coveragerc --cov=datar --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
