[tool.poetry]
name = "datar"
version = "0.15.7"
description = "A Grammar of Data Manipulation in python"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/datar"
repository = "https://github.com/pwwang/datar"

[tool.poetry.dependencies]
python = "^3.9"
simplug = "^0.5"
pipda = "^0.13.1"
python-simpleconf = {version = "^0.6", extras = ["toml"]}
datar-numpy = {version = "^0.3.4", optional = true}
datar-pandas = {version = "^0.5.5", optional = true}
# datar-polars = {version = "^0.0.0", optional = true}
datar-arrow = {version = "^0.1", optional = true}

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.extras]
numpy = ["datar-numpy"]
pandas = ["datar-pandas"]
arrow = ["datar-arrow"]
# modin = ["datar-pandas"]
# polars = ["datar-polars"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^6"
six = "^1.16"
numpy = "^1.17"
python-slugify = "^8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"
mkdocs-material = "^9.6"
pymdown-extensions = "^10.14"
mkapi-fix = "^0.1"
mkdocs-jupyter = "^0.25"
ipykernel = "^6.29"
ipython-genutils = "^0.2"
plotnine = "^0.13"
klib = "^1.3"
pardoc = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = true
disable_error_code = ["attr-defined", "no-redef", "union-attr"]
show_error_codes = true
strict_optional = false

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --tb=short --cov-config=.coveragerc --cov=datar --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
